Name a materialized artifact after the module it carries
An artifact was materialized under its encoded coordinate, which derives no
module at all, so an automatic module reached the module path without the
version the runtime would otherwise read off the file name: no version in
Module::getDescriptor, none in a stack trace, and an alias renamed to a bare
<alias>.jar dropped the one the closure had resolved.

A jar that carries a module is now named after it, at the version the
resolution settled on, and only an artifact with no module identity keeps the
encoded coordinate that the dependency index already spells out. The repository
prefix is gone from both, so internal and external artifacts read alike. Both
halves of a name are encoded, which changes nothing for a legal module name and
an ordinary version, and keeps a version a file system would reject out of a
file name.

Only a name the file name itself carries can break, so only an alias guards its
version: appended when the runtime can derive it back, left off when it cannot,
as for a 1-SNAPSHOT that would truncate the name into a module that does not
resolve. A jar that states its own name takes any version, because the runtime
reads the name from within and ignores a tail it cannot parse.

Naming is per file rather than per coordinate. The modular layout reaches one
artifact under both its module and its Maven coordinate, and the first claim
decides, with an alias claiming ahead of the rest so a rename always wins.
Two artifacts claiming one name is an error naming both. The reuse of a previous
resolution reads that resolution's index instead of reconstructing names, which
also retires the aliased-name lookup it needed before.

The modularize rewrite carries the same names, and the descriptor it synthesises
now records the version, read from the resolution graph rather than from any file
name, so a linked image reports the identity a plain module path reports:
org.kohsuke.args4j@2.33 rather than a bare name.